--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MoviesDB | Demo</title>
   <link rel="icon" href="images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
